[package]
name = "auto-mine-backup"
version = "1.0.0"
description = "An application to back up Minecraft data"
authors = ["Lucas-Gardini"]
edition = "2021"

[lib]
name = "auto_mine_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "6.0.0"
walkdir = "2.5.0"
zip = "6.0.0"
tauri-plugin-process = "2"
